Layout issues fixed

--- a/mcidashboard/mcidashboard-front/src/css/demographic_summary.css
+++ b/mcidashboard/mcidashboard-front/src/css/demographic_summary.css
@@ -7,7 +7,7 @@
     width: 100%;
     border-collapse: collapse;
     margin: 10px 0;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .demographic-table th,
@@ -17,7 +17,7 @@
 }
 
 .demographic-table th {
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .demographic-table thead th {
@@ -29,7 +29,7 @@
 }
 
 .demographic-table .category {
-    font-size: 14px;
+    font-size: 18px;
 }
 
 .demographic-table .numbers {
